vlib/v/checker/tests/map_init_key_duplicate_err.vv
fn main() {
	a := map{
		'foo': 'bar'
		'abc': 'abc'
		'foo': 'bar'
	}
	println(a)

	_ = map{2:0 3:0 2:0}
}
